very minor spacing fix

--- a/assets/components/discuss/themes/modx-dev/sass/_forums.sass
+++ b/assets/components/discuss/themes/modx-dev/sass/_forums.sass
@@ -68,7 +68,6 @@ h3.forum
         border-radius: 0 0 3px 3px
         line-height: 1
         padding: 7px 6px 7px 8px
-        margin-bottom: .35em
     .dis-cat-header
         margin-top: 2em
 
